--- a/tornadofaces/src/themes/tornado/package.json
+++ b/tornadofaces/src/themes/tornado/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-minify-css": "^0.4.6",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
