--- a/tornadofaces/pom.xml
+++ b/tornadofaces/pom.xml
@@ -5,14 +5,62 @@
     <artifactId>tornadofaces</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <url>http://maven.apache.org</url>
-
+    <name>TornadoFaces</name>
+    <description>Modern JSF Component Library</description>
+    <url>http://www.tornadofaces.io/</url>
+    
     <parent>
         <groupId>io.tornadofaces</groupId>
         <artifactId>parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>tornado-nexus-snapshots</id>
+            <name>Tornado Nexus Snapshots</name>
+            <url>http://tornado.no:1080/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Nexus Release Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <organization>
+        <name>SYSE</name>
+        <url>https://www.syse.no/</url>
+    </organization>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Edvin Syse</name>
+            <email>es@syse.no</email>
+            <organization>SYSE AS</organization>
+            <organizationUrl>https://www.syse.no</organizationUrl>
+        </developer>
+        <developer>
+            <name>Vebjørn Berg</name>
+            <email>vb@syse.no</email>
+            <organization>SYSE AS</organization>
+            <organizationUrl>https://www.syse.no</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:edvin/tornadofaces.git</connection>
+        <developerConnection>scm:git:git@github.com:edvin/tornadofaces.git</developerConnection>
+        <url>git@github.com:edvin/tornadofaces.git</url>
+    </scm>
+    
     <dependencies>
         <dependency>
             <groupId>javax.faces</groupId>
@@ -41,6 +89,20 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.1</version>
+                    <configuration>
+                        <mavenExecutorId>forked-path</mavenExecutorId>
+                        <useReleaseProfile>false</useReleaseProfile>
+                        <arguments>-Psonatype-oss-release</arguments>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -50,6 +112,20 @@
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
