--- a/tornadofaces/pom.xml
+++ b/tornadofaces/pom.xml
@@ -146,7 +146,7 @@
                         <id>sign-artifacts</id>
                         <phase>verify</phase>
                         <goals>
-                            <goal>sign</goal>
+                            <!--<goal>sign</goal>-->
                         </goals>
                     </execution>
                 </executions>
