--- a/site/pom.xml
+++ b/site/pom.xml
@@ -20,6 +20,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>no.tornado</groupId>
+            <artifactId>libsass-filter</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
