--- a/tornadofaces/pom.xml
+++ b/tornadofaces/pom.xml
@@ -128,7 +128,7 @@
                         <id>sign-artifacts</id>
                         <phase>verify</phase>
                         <goals>
-                            <!--<goal>sign</goal>-->
+                            <goal>sign</goal>
                         </goals>
                     </execution>
                 </executions>
