--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,11 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.tornadofaces</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>tornadofaces-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <url>http://maven.apache.org</url>
+    <name>TornadoFaces Parent</name>
 
 	<modules>
 		<module>tornadofaces</module>
