--- a/site/pom.xml
+++ b/site/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>no.tornado</groupId>
             <artifactId>libsass-filter</artifactId>
-            <version>0.1.2.1</version>
+            <version>0.1.2.2</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -41,16 +41,63 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <directory>src/main/webapp/WEB-INF/</directory>
+                            <targetPath>WEB-INF</targetPath>
+                            <includes>
+                                <include>web.xml</include>
+                            </includes>
+                            <filtering>true</filtering>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>1.0.1.Final</version>
 
                 <configuration>
-                    <hostname>tornadofaces.io</hostname>
+                    <hostname>${wildfly.host}</hostname>
                     <force>true</force>
-                    <port>11090</port>
+                    <port>${wildfly.port}</port>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>development</id>
+            <properties>
+                <jsfProjectStage>Development</jsfProjectStage>
+                <wildfly.host>localhost</wildfly.host>
+                <wildfly.port>9990</wildfly.port>
+                <libsassCache>false</libsassCache>
+                <libsassOutputStyle>compact</libsassOutputStyle>
+                <libsassAutoprefix>false</libsassAutoprefix>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>production</id>
+            <properties>
+                <jsfProjectStage>Production</jsfProjectStage>
+                <wildfly.port>11090</wildfly.port>
+                <wildfly.host>tornadofaces.io</wildfly.host>
+                <libsassCache>true</libsassCache>
+                <libsassOutputStyle>compressed</libsassOutputStyle>
+                <libsassAutoprefix>true</libsassAutoprefix>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
