--- a/tornadofaces/pom.xml
+++ b/tornadofaces/pom.xml
@@ -62,16 +62,16 @@
     </scm>
 
     <dependencies>
-        <dependency>
-            <groupId>javax.faces</groupId>
-            <artifactId>javax.faces-api</artifactId>
-            <version>2.2</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.faces</groupId>-->
+            <!--<artifactId>javax.faces-api</artifactId>-->
+            <!--<version>2.2</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.2.9</version>
+            <version>2.2.8</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
