Started working on LineChart

--- a/site/src/main/webapp/WEB-INF/web.xml
+++ b/site/src/main/webapp/WEB-INF/web.xml
@@ -63,7 +63,12 @@
         <extension>woff</extension>
         <mime-type>application/octet-stream</mime-type>
     </mime-mapping>
-    
+
+    <mime-mapping>
+        <extension>woff2</extension>
+        <mime-type>application/octet-stream</mime-type>
+    </mime-mapping>
+
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
